--- a/day3/practice 2/index.html
+++ b/day3/practice 2/index.html
@@ -50,17 +50,64 @@
             border-radius: 10px;
             padding: 2px 0px;
         }
+        #pop-up-view{
+            position: fixed;
+            height: 100vh;
+            width: 100vw;
+            background-color: rgba(0, 0, 0, 0.6);
+            top: 0;
+            left: 0;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        #pop-up-container{
+            background-color: white;
+            padding: 1.5rem;
+            border-radius: 1rem;
+        }
+
     </style>
 </head>
 <body>
     <header>
         <h2 style="padding-left: 30px;">Recipe Store</h2>
+        <button>Home</button>
     </header>
-    <main id="root"></main>
+    <main id="root">
+        <div class="card">
+            <p>DUMMY CARD TITLE</p>
+            <p>Dummy Cuisine</p>
+            <p>Dummy Rating</p>
+            <p>Dummy Servings</p>
+            <button onclick="handleCardClick()">Click Me</button>
+        </div>
+    </main>
     <!-- <footer>
         &copy; xyz@gmail.com
     </footer> -->
+    <div id="pop-up-view" style="display: none;">
+        <div id="pop-up-container">
+            <p>Hello</p>
+            <button onclick="handleClosePopUp()">Close</button>
+        </div>
+    </div>
     <script src="./app.js"></script>
 </body>
 </html>
 
+
+
+<!-- <style>
+    main{
+        display: grid;
+        grid-template-columns: repeat(auto-fit,320px);
+        justify-content: center;
+        gap: 1.5rem;
+    }
+    .card{
+        border: 1px solid lightgray;
+
+    }
+</style> -->
