--- a/day7/basic1/index.html
+++ b/day7/basic1/index.html
@@ -14,7 +14,13 @@
         <h3>Hello from parent</h3>
     </div>
     <footer>&copy; Likhilesh.xyz</footer>
-    <script src="./app.js"></script>
 
+
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    
+    <script src="./app.js"></script>
 </body>
 </html>
