--- a/day7/props-handelling/index.html
+++ b/day7/props-handelling/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+        .parent{
+            padding: 2rem;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 2rem;
+            align-items: center;
+        }
+        .card{
+            padding: 1.5rem;
+            border-radius: 1.5rem;
+            border: 1px solid lightgray;
+            background-color: antiquewhite;
+        }
+    </style>
 </head>
 <body>
     <div id="root"></div>
